Closed
Bug 1475262
Opened 7 years ago
Closed 7 years ago
Size of Saved Logins box is no longer saved (Tools/Options/Privacy/Saved Logins)
Categories
(Core :: XUL, defect)
Tracking
()
VERIFIED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | --- | verified |
| firefox63 | --- | verified |
People
(Reporter: alicechiappini, Assigned: bdahl)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
smaug
:
review+
lizzard
:
approval-mozilla-beta+
|
Details |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:62.0) Gecko/20100101 Firefox/62.0
Build ID: 20180709172241
Steps to reproduce:
FIREFOX 62 BETA 7. When I open options-privacy and security-saved access and enlarge the box with the saved passwords, the size chosen by me of the box is not stored but returns to the default size.
Actual results:
the size chosen by me of the box is not stored but returns to the default size when i open it again.
Expected results:
When I change the dimensions of the box I would like the new dimensions to be preserved
Comment 1•7 years ago
|
||
| regression-window | ||
Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:63.0) Gecko/20100101 Firefox/63.0
20180712100120
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b830e5f05a78fad337911b36930a322bb82a81f1&tochange=49a11acd0acf4c3012d57ee45743412e236869ee
Blocks: 1453788
Severity: normal → minor
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
status-firefox61:
--- → unaffected
status-firefox62:
--- → affected
status-firefox63:
--- → affected
Component: Untriaged → Preferences
Ever confirmed: true
Keywords: regression
Summary: Size of box SAVED ACCESS (Tools/Options/Privacy/saved access) is not saved → Size of Saved Logins box is no longer saved (Tools/Options/Privacy/Saved Logins)
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → bdahl
Updated•7 years ago
|
Status: NEW → ASSIGNED
Updated•7 years ago
|
Component: Preferences → XUL
Product: Firefox → Core
Comment 3•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8991740 [details]
Bug 1475262 - Only ignore XUL persist on top level windows.
https://reviewboard.mozilla.org/r/256674/#review263848
Attachment #8991740 -
Flags: review?(bugs) → review+
Comment 4•7 years ago
|
||
Neil, is this worth landing now, or waiting for bdahl to come back from PTO?
Flags: needinfo?(enndeakin)
Comment 5•7 years ago
|
||
This is fairly low risk so I think it could be checked in now.
Flags: needinfo?(enndeakin)
Pushed by csabou@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/10159cf474be
Only ignore XUL persist on top level windows. r=smaug
Keywords: checkin-needed
Comment 8•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Updated•7 years ago
|
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
| Comment hidden (obsolete) |
| Reporter | ||
Comment 10•7 years ago
|
||
Sorry for my previous post. Could you find a FIX for FF 62 too?
Best regards and thanks.
Alice
Comment 11•7 years ago
|
||
Comment on attachment 8991740 [details]
Bug 1475262 - Only ignore XUL persist on top level windows.
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1453788, de-XUL project
[User impact if declined]: Users' previous preference subdialog window sizes will not be used
[Is this code covered by automated tests?]: The change didn't add tests
[Has the fix been verified in Nightly?]: No
[Needs manual test from QE? If yes, steps to reproduce]: Maybe, seems like the reporter is confirming it's fixed in Nightly
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No, see comment 5
[Why is the change risky/not risky?]: straightforward change
[String changes made/needed]: None
Attachment #8991740 -
Flags: approval-mozilla-beta?
Comment 12•7 years ago
|
||
Comment on attachment 8991740 [details]
Bug 1475262 - Only ignore XUL persist on top level windows.
Verified by reporter, let's uplift to beta. This should land for the beta 12 build.
Attachment #8991740 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•7 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
Flags: qe-verify+
Comment 14•7 years ago
|
||
I have reproduced this bug using the STR from comment 0, on an affected Nightly build 2018-07-12.
I can confirm that the behavior described in this bug is verified as fixed on Beta 62.0b12 (20180726161819) and latest Nightly 63.0a1 (2018-07-26).
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Comment 15•7 years ago
|
||
Forgot to add the platforms tested: Windows 10 x64, macOS 10.12 and Ubuntu 16.04 x64.
| Reporter | ||
Comment 16•7 years ago
|
||
Hi.
My feedback: just installed (on a PC with WINDOWS 10 HE 64 bit) the last FIREFOX, FF 62 BETA 12. The bug has been fixed and the problem I reported is no longer present.
Thanks.
Alice
You need to log in
before you can comment on or make changes to this bug.
Description
•