Bug 1475262 - Only ignore XUL persist on top level windows. r=smaug a=lizzard

Fixes the incorrect assumption that all XUL <window> elements are top level
windows and will have their attribute persistence handled by the
nsXULWindow. An example of where this assumption fails is the password
manager which opens a <window> within a sub dialog that has no nsXULWindow.

MozReview-Commit-ID: 1f59QPIz42s